--- a/index.html
+++ b/index.html
@@ -1,1 +1,169 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Claire Lee</title>
+    <link rel="stylesheet" href="./Assets/style.css">
+    <!--This stylesheet is what allows the github icon to appear.-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+</head>
+
+<body>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="#about">About</a></li>
+                <li><a href="#skills">Skills</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#contact-me">Contact Me</a></li>
+                <!-- <li><a class="resume" href="#" target="_blank" rel="noopener noreferrer">Resume</a></li> -->
+            </ul>
+        </nav>
+    </header>
+
+    <section id="home">
+        <h1>Hi my name is Claire. Nice to meet you!</h1>
+    </section>
+
+    <section id="about">
+        <h2>About Me</h2>
+        <article>Hi, I was a Chemistry and Biology major in my undergrad but have always shined when allowed to be
+            creative in school projects. A year into my graduate research journey at The Ohio State University's food
+            science
+            program, I decided that it wasn't for me and that I desired a career that better balanced creativity and
+            problem-solving skills. I hope that
+            you'll follow along as I develop websites and myself.
+            <img src="https://media-exp1.licdn.com/dms/image/C4E03AQGUWoaKUKHksg/profile-displayphoto-shrink_200_200/0/1616515294451?e=1673481600&v=beta&t=KW4fN-hyTrdpbPgDOakq9tuGsZWjhW2E7XZQDmeUUCY"
+                alt-text="Image of Claire Lee">
+        </article>
+
+    </section>
+
+    <!--
+    <section id="skills">
+        <h2>Skills</h2>
+
+    </section> -->
+
+    <section id="projects">
+        <h2>Projects</h2>
+
+        <section class="first project">
+            <figure>
+                <img src="./Assets/Latest_Project.PNG" alt-text="CSS Snippet Cheatsheet Project">
+                <figcaption>CSS Snippet Cheatsheet Project</figcaption>
+                <p>This project was a collaborative effort to display a collection of Cascading Style Sheet (CSS)
+                    concepts on a single responsive webpage as a way to study and put into practice CSS concepts. </p>
+            </figure>
+            <div class="buttons">
+                <a href="https://suvarna28.github.io/CSS-Snippet-Cheatsheet/" target="_blank" rel="noreferrer">
+                    <button>Live Demo</button>
+                </a>
+                <a href="https://github.com/suvarna28/CSS-Snippet-Cheatsheet" target="_blank" rel="noreferrer">
+                    <button>&#60;Code&#62;</button>
+                </a>
+            </div>
+        </section>
+
+
+        <section class="other projects">
+
+            <section class="second project">
+                <h3>Horiseon Accessibility and SEO Project</h3>
+                <figure>
+                    <img src="./Assets/Second_Project.PNG" alt-text="Accessibility and SEO Project">
+                    <figcaption>This project focused on increasing accessibility and search engine optimization by
+                        changing the
+                        <code>div</code> HTML tags to semantic HTML tags and adding alt-text.
+                    </figcaption>
+                </figure>
+                <div class="buttons">
+                    <a href="https://leeclaire156.github.io/GWU_HW1_Horiseon-SEO-Accessibility/" target="_blank"
+                        rel="noreferrer">
+                        <button>Live Demo</button>
+                    </a>
+                    <a href="https://github.com/leeclaire156/GWU_HW1_Horiseon-SEO-Accessibility" target="_blank"
+                        rel="noreferrer">
+                        <button>&#60;Code&#62;</button>
+                    </a>
+                </div>
+            </section>
+
+            <section class="third project">
+                <h3>Coming Soon</h3>
+                <figure>
+                    <img src="./Assets/ComingSoon.svg" alt-text="Construction of House">
+                    <figcaption> Stay tuned for this upcoming project!</figcaption>
+                </figure>
+                <div class="buttons">
+                    <a href="#" target="_blank" rel="noreferrer">
+                        <button>Live Demo</button>
+                    </a>
+                    <a href="#" target="_blank" rel="noreferrer">
+                        <button>&#60;Code&#62;</button>
+                    </a>
+                </div>
+            </section>
+
+            <section class="fourth project">
+                <h3>Coming Soon</h3>
+                <figure>
+                    <img src="./Assets/ComingSoon.svg" alt-text="Construction of House">
+                    <figcaption> Stay tuned for this upcoming project!</figcaption>
+                </figure>
+                <div class="buttons">
+                    <a href="#" target="_blank" rel="noreferrer">
+                        <button>Live Demo</button>
+                    </a>
+                    <a href="#" target="_blank" rel="noreferrer">
+                        <button>&#60;Code&#62;</button>
+                    </a>
+                </div>
+            </section>
+
+            <section class="fifth project">
+                <h3>Coming Soon</h3>
+                <figure>
+                    <img src="./Assets/ComingSoon.svg" alt-text="Construction of House">
+                    <figcaption> Stay tuned for this upcoming project!</figcaption>
+                </figure>
+                <div class="buttons">
+                    <a href="#" target="_blank" rel="noreferrer">
+                        <button>Live Demo</button>
+                    </a>
+                    <a href="#" target="_blank" rel="noreferrer">
+                        <button>&#60;Code&#62;</button>
+                    </a>
+                </div>
+            </section>
+
+        </section>
+
+    </section>
+
+    <section id="contact-me">
+        <h2 id="Contact-Header">Contact Me</h2>
+        <ul id="Contact-Links">
+            <li>
+                <strong class="Links">Email: </strong>
+                <a href="mailto: lee.claire156@gmail.com">lee.claire156@gmail.com</a>
+            </li>
+            <li>
+                <strong class="Links">GitHub: </strong>
+                <a href="https://github.com/leeclaire156" target="_blank" rel="noreferrer"><i
+                        style="font-size:24px; color:blue" class="fa">&#xf09b;</i></a>
+            </li>
+            <li>
+                <strong class="Links">LinkedIn: </strong>
+                <a href="https://www.linkedin.com/in/claire-lee-556b3a209/" target="_blank" rel="noreferrer">Let's
+                    Connect</a>
+            </li>
+        </ul>
+    </section>
+
+</body>
+
+</html>
