FOrmatted the Contact Me section of the webpage so that the link and header are centered

--- a/index.html
+++ b/index.html
@@ -77,10 +77,10 @@
             <section id="second">
                 <h3>Horiseon Accessibility and SEO Project</h3>
                 <figure>
-                    <img class="thumbnail" src="./Assets/Second_Project.PNG" alt-text="Accessibility and SEO Project">
-                    <figcaption>This project focused on increasing accessibility and search engine optimization by
-                        changing the
-                        <code>div</code> HTML tags to semantic HTML tags and adding alt-text.
+                    <img class="thumbnail" src="./Assets/Second_Project.PNG" alt-text="Horiseon Refactoring Project">
+                    <figcaption>This project focused on increasing accessibility and search engine optimization (SEO) by
+                        updating the original client's HTML tags to semantic HTML tags and adding alternative-text to
+                        images for screen-readers.
                     </figcaption>
                 </figure>
                 <div class="buttons">
@@ -148,7 +148,7 @@
         </section>
 
         <section id="contact">
-            <h2>Contact Me</h2>
+            <h2 id="contactheader">Contact Me</h2>
             <ul>
                 <li>
                     <strong class="Links">Email: </strong>
