Formats 'About' section

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
         </section>
 
         <section id="about">
-            <h2>About Me</h2>
-            <article>Hi there! I have a background in Chemistry and Biology
+            <h2 id="aboutheader">About Me</h2>
+            <article id="intro">Hi there! I have a background in Chemistry and Biology
                 but
                 have always
                 shined best when allowed to be
@@ -39,7 +39,7 @@
                 program, I decided that it wasn't for me and that I desired a career that better balanced creativity and
                 problem-solving skills. Please follow me as I develop websites and myself.
             </article>
-            <img class="about" id="AMpic"
+            <img id="me"
                 src="https://media-exp1.licdn.com/dms/image/C4E03AQGUWoaKUKHksg/profile-displayphoto-shrink_200_200/0/1616515294451?e=1673481600&v=beta&t=KW4fN-hyTrdpbPgDOakq9tuGsZWjhW2E7XZQDmeUUCY"
                 alt-text="Image of Claire Lee">
         </section>
