Reorganizes CSS and HTML tags

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </section>
 
         <section id="about">
-            <h2 id="aboutheader">About Me</h2>
+            <h2 id="about-header">About Me</h2>
             <article id="intro">Hi there! I have a background in Chemistry and Biology
                 but
                 have always
@@ -51,8 +51,7 @@
         </section> -->
 
         <section id="projects">
-            <h2 id="projectheader">Projects</h2>
-
+            <h2 id="project-header">Projects</h2>
             <section id="first">
                 <h3>CSS Snippet Cheatsheet Project</h3>
                 <figure>
@@ -64,7 +63,7 @@
                         concepts on a single responsive webpage as a way to study and put into practice CSS concepts.
                     </figcaption>
                 </figure>
-                <div class="buttons">
+                <div class="buttons" id="first-buttons">
                     <a href="https://suvarna28.github.io/CSS-Snippet-Cheatsheet/" target="_blank" rel="noreferrer">
                         <button>Live Demo</button>
                     </a>
@@ -83,7 +82,7 @@
                         images for screen-readers.
                     </figcaption>
                 </figure>
-                <div class="buttons">
+                <div class="buttons" id="second-buttons">
                     <a href="https://leeclaire156.github.io/GWU_HW1_Horiseon-SEO-Accessibility/" target="_blank"
                         rel="noreferrer">
                         <button>Live Demo</button>
@@ -101,12 +100,12 @@
                     <img class="soon" src="./Assets/ComingSoon.svg" alt-text="Construction of House">
                     <figcaption> Stay tuned for this upcoming project!</figcaption>
                 </figure>
-                <div class="buttons">
-                    <a href="#" target="_blank" rel="noreferrer">
-                        <button>Live Demo</button>
+                <div class="buttons" id="third-buttons">
+                    <!-- <a href="#" target="_blank" rel="noreferrer"> -->
+                    <button>Live Demo</button>
                     </a>
-                    <a href="#" target="_blank" rel="noreferrer">
-                        <button>&#60;Code&#62;</button>
+                    <!-- <a href="#" target="_blank" rel="noreferrer"> -->
+                    <button>&#60;Code&#62;</button>
                     </a>
                 </div>
             </section>
@@ -117,12 +116,12 @@
                     <img class="soon" src="./Assets/ComingSoon.svg" alt-text="Construction of House">
                     <figcaption> Stay tuned for this upcoming project!</figcaption>
                 </figure>
-                <div class="buttons">
-                    <a href="#" target="_blank" rel="noreferrer">
-                        <button>Live Demo</button>
+                <div class="buttons" id="fourth-buttons">
+                    <!-- <a href="#" target="_blank" rel="noreferrer"> -->
+                    <button>Live Demo</button>
                     </a>
-                    <a href="#" target="_blank" rel="noreferrer">
-                        <button>&#60;Code&#62;</button>
+                    <!-- <a href="#" target="_blank" rel="noreferrer"> -->
+                    <button>&#60;Code&#62;</button>
                     </a>
                 </div>
             </section>
@@ -133,12 +132,12 @@
                     <img class="soon" src="./Assets/ComingSoon.svg" alt-text="Construction of House">
                     <figcaption> Stay tuned for this upcoming project!</figcaption>
                 </figure>
-                <div class="buttons">
-                    <a href="#" target="_blank" rel="noreferrer">
-                        <button>Live Demo</button>
+                <div class="buttons" id="fifth-buttons">
+                    <!-- <a href="#" target="_blank" rel="noreferrer"> -->
+                    <button>Live Demo</button>
                     </a>
-                    <a href="#" target="_blank" rel="noreferrer">
-                        <button>&#60;Code&#62;</button>
+                    <!-- <a href="#" target="_blank" rel="noreferrer"> -->
+                    <button>&#60;Code&#62;</button>
                     </a>
                 </div>
             </section>
@@ -148,7 +147,7 @@
         </section>
 
         <section id="contact">
-            <h2 id="contactheader">Contact Me</h2>
+            <h2 id="contact-header">Contact Me</h2>
             <ul>
                 <li>
                     <strong class="Links">Email: </strong>
