Resolves image overflow issue

--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Claire Lee</title>
     <link rel="stylesheet" href="./Assets/style.css">
-    <!--This stylesheet is what allows the github icon to appear.-->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -16,10 +14,8 @@
         <nav>
             <ul>
                 <li><a href="#about">About</a></li>
-                <!-- <li><a href="#skills">Skills</a></li> -->
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#contact">Contact Me</a></li>
-                <!-- <li><a class="resume" href="#" target="_blank" rel="noopener noreferrer">Resume</a></li> -->
             </ul>
         </nav>
 
@@ -43,12 +39,6 @@
                 src="https://media-exp1.licdn.com/dms/image/C4E03AQGUWoaKUKHksg/profile-displayphoto-shrink_200_200/0/1616515294451?e=1673481600&v=beta&t=KW4fN-hyTrdpbPgDOakq9tuGsZWjhW2E7XZQDmeUUCY"
                 alt-text="Image of Claire Lee">
         </section>
-
-        <!-- Future Update
-        <section id="skills">
-            <h2>Skills</h2>
-    
-        </section> -->
 
         <section id="projects">
             <h2 id="project-header">Projects</h2>
@@ -97,7 +87,7 @@
             <section id="third">
                 <h3>Coming Soon</h3>
                 <figure>
-                    <img class="soon" src="./Assets/ComingSoon.svg" alt-text="Construction of House">
+                    <img class="coming-soon" src="./Assets/ComingSoon.svg" alt-text="Construction of House">
                     <figcaption> Stay tuned for this upcoming project!</figcaption>
                 </figure>
                 <div class="buttons" id="third-buttons">
@@ -113,7 +103,7 @@
             <section id="fourth">
                 <h3>Coming Soon</h3>
                 <figure>
-                    <img class="soon" src="./Assets/ComingSoon.svg" alt-text="Construction of House">
+                    <img class="coming-soon" src="./Assets/ComingSoon.svg" alt-text="Construction of House">
                     <figcaption> Stay tuned for this upcoming project!</figcaption>
                 </figure>
                 <div class="buttons" id="fourth-buttons">
@@ -129,7 +119,7 @@
             <section id="fifth">
                 <h3>Coming Soon</h3>
                 <figure>
-                    <img class="soon" src="./Assets/ComingSoon.svg" alt-text="Construction of House">
+                    <img class="coming-soon" src="./Assets/ComingSoon.svg" alt-text="Construction of House">
                     <figcaption> Stay tuned for this upcoming project!</figcaption>
                 </figure>
                 <div class="buttons" id="fifth-buttons">
@@ -154,7 +144,6 @@
                 <li>
                     <strong class="Links">GitHub: </strong>
                     <a href="https://github.com/leeclaire156" target="_blank" rel="noreferrer">
-                        <!--<i style="font-size:24px; color:blue" class="fa">&#xf09b;</i>-->
                         My GitHub
                     </a>
                 </li>
