Adds Responsiveness to Project Section

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </nav>
 
         <section id="home">
-            <h1>Hi my name is Claire. Nice to meet you!</h1>
+            <h1>Hi, my name is Claire. Nice to meet you!</h1>
         </section>
 
         <section id="about">
@@ -62,92 +62,96 @@
                     </a>
                 </div>
             </section>
+            <div id="other-projects">
+                <section id="second">
+                    <h3>Horiseon Accessibility and SEO Project</h3>
+                    <figure>
+                        <img class="thumbnail" src="./Assets/Second_Project.PNG"
+                            alt-text="Horiseon Refactoring Project">
+                        <figcaption>This project focused on increasing accessibility and search engine optimization
+                            (SEO) by
+                            updating the original client's HTML tags to semantic HTML tags and adding alternative-text
+                            to
+                            images for screen-readers.
+                        </figcaption>
+                    </figure>
+                    <div class="buttons" id="second-buttons">
+                        <a href="https://leeclaire156.github.io/GWU_HW1_Horiseon-SEO-Accessibility/" target="_blank"
+                            rel="noreferrer">
+                            <button>Live Demo</button>
+                        </a>
+                        <a href="https://github.com/leeclaire156/GWU_HW1_Horiseon-SEO-Accessibility" target="_blank"
+                            rel="noreferrer">
+                            <button>&#60;Code&#62;</button>
+                        </a>
+                    </div>
+                </section>
 
-            <section id="second">
-                <h3>Horiseon Accessibility and SEO Project</h3>
-                <figure>
-                    <img class="thumbnail" src="./Assets/Second_Project.PNG" alt-text="Horiseon Refactoring Project">
-                    <figcaption>This project focused on increasing accessibility and search engine optimization (SEO) by
-                        updating the original client's HTML tags to semantic HTML tags and adding alternative-text to
-                        images for screen-readers.
-                    </figcaption>
-                </figure>
-                <div class="buttons" id="second-buttons">
-                    <a href="https://leeclaire156.github.io/GWU_HW1_Horiseon-SEO-Accessibility/" target="_blank"
-                        rel="noreferrer">
+                <section id="third">
+                    <h3>Coming Soon</h3>
+                    <figure>
+                        <img class="coming-soon" src="./Assets/ComingSoon.svg" alt-text="Construction of House">
+                        <figcaption> Stay tuned for this upcoming project!</figcaption>
+                    </figure>
+                    <div class="buttons" id="third-buttons">
+                        <!-- <a href="#" target="_blank" rel="noreferrer"> -->
                         <button>Live Demo</button>
-                    </a>
-                    <a href="https://github.com/leeclaire156/GWU_HW1_Horiseon-SEO-Accessibility" target="_blank"
-                        rel="noreferrer">
+                        </a>
+                        <!-- <a href="#" target="_blank" rel="noreferrer"> -->
                         <button>&#60;Code&#62;</button>
-                    </a>
-                </div>
-            </section>
+                        </a>
+                    </div>
+                </section>
 
-            <section id="third">
-                <h3>Coming Soon</h3>
-                <figure>
-                    <img class="coming-soon" src="./Assets/ComingSoon.svg" alt-text="Construction of House">
-                    <figcaption> Stay tuned for this upcoming project!</figcaption>
-                </figure>
-                <div class="buttons" id="third-buttons">
-                    <!-- <a href="#" target="_blank" rel="noreferrer"> -->
-                    <button>Live Demo</button>
-                    </a>
-                    <!-- <a href="#" target="_blank" rel="noreferrer"> -->
-                    <button>&#60;Code&#62;</button>
-                    </a>
-                </div>
-            </section>
+                <section id="fourth">
+                    <h3>Coming Soon</h3>
+                    <figure>
+                        <img class="coming-soon" src="./Assets/ComingSoon.svg" alt-text="Construction of House">
+                        <figcaption> Stay tuned for this upcoming project!</figcaption>
+                    </figure>
+                    <div class="buttons" id="fourth-buttons">
+                        <!-- <a href="#" target="_blank" rel="noreferrer"> -->
+                        <button>Live Demo</button>
+                        </a>
+                        <!-- <a href="#" target="_blank" rel="noreferrer"> -->
+                        <button>&#60;Code&#62;</button>
+                        </a>
+                    </div>
+                </section>
 
-            <section id="fourth">
-                <h3>Coming Soon</h3>
-                <figure>
-                    <img class="coming-soon" src="./Assets/ComingSoon.svg" alt-text="Construction of House">
-                    <figcaption> Stay tuned for this upcoming project!</figcaption>
-                </figure>
-                <div class="buttons" id="fourth-buttons">
-                    <!-- <a href="#" target="_blank" rel="noreferrer"> -->
-                    <button>Live Demo</button>
-                    </a>
-                    <!-- <a href="#" target="_blank" rel="noreferrer"> -->
-                    <button>&#60;Code&#62;</button>
-                    </a>
-                </div>
-            </section>
-
-            <section id="fifth">
-                <h3>Coming Soon</h3>
-                <figure>
-                    <img class="coming-soon" src="./Assets/ComingSoon.svg" alt-text="Construction of House">
-                    <figcaption> Stay tuned for this upcoming project!</figcaption>
-                </figure>
-                <div class="buttons" id="fifth-buttons">
-                    <!-- <a href="#" target="_blank" rel="noreferrer"> -->
-                    <button>Live Demo</button>
-                    </a>
-                    <!-- <a href="#" target="_blank" rel="noreferrer"> -->
-                    <button>&#60;Code&#62;</button>
-                    </a>
-                </div>
-            </section>
+                <section id="fifth">
+                    <h3>Coming Soon</h3>
+                    <figure>
+                        <img class="coming-soon" src="./Assets/ComingSoon.svg" alt-text="Construction of House">
+                        <figcaption> Stay tuned for this upcoming project!</figcaption>
+                    </figure>
+                    <div class="buttons" id="fifth-buttons">
+                        <!-- <a href="#" target="_blank" rel="noreferrer"> -->
+                        <button>Live Demo</button>
+                        </a>
+                        <!-- <a href="#" target="_blank" rel="noreferrer"> -->
+                        <button>&#60;Code&#62;</button>
+                        </a>
+                    </div>
+                </section>
+            </div>
 
         </section>
 
         <section id="contact">
             <h2 id="contact-header">Contact Me</h2>
             <ul>
-                <li>
+                <li id="email">
                     <strong class="Links">Email: </strong>
                     <a href="mailto: lee.claire156@gmail.com">lee.claire156@gmail.com</a>
                 </li>
-                <li>
+                <li id="github">
                     <strong class="Links">GitHub: </strong>
                     <a href="https://github.com/leeclaire156" target="_blank" rel="noreferrer">
                         My GitHub
                     </a>
                 </li>
-                <li>
+                <li id="linkedin">
                     <strong class="Links">LinkedIn: </strong>
                     <a href="https://www.linkedin.com/in/claire-lee-556b3a209/" target="_blank" rel="noreferrer">Let's
                         Connect</a>
