Clicking on Project Images will take you to their deployed website as well

--- a/index.html
+++ b/index.html
@@ -45,7 +45,10 @@
             <section id="first">
                 <h3>CSS Snippet Cheatsheet Project</h3>
                 <figure>
-                    <img class="thumbnail" src="./Assets/Latest_Project.PNG" alt-text="CSS Snippet Cheatsheet Project">
+                    <a href="https://suvarna28.github.io/CSS-Snippet-Cheatsheet/" target="_blank" rel="noreferrer">
+                        <img class="thumbnail" src="./Assets/Latest_Project.PNG"
+                            alt-text="CSS Snippet Cheatsheet Project">
+                    </a>
                     <figcaption>This project was a collaborative effort to display a collection of Cascading Style Sheet
                         (CSS)
                         concepts on a single responsive webpage as a way to study and put into practice CSS concepts.
@@ -64,8 +67,11 @@
                 <section id="second">
                     <h3>Horiseon Accessibility and SEO Project</h3>
                     <figure>
-                        <img class="thumbnail" src="./Assets/Second_Project.PNG"
-                            alt-text="Horiseon Refactoring Project">
+                        <a href="https://leeclaire156.github.io/GWU_HW1_Horiseon-SEO-Accessibility/" target="_blank"
+                            rel="noreferrer">
+                            <img class="thumbnail" src="./Assets/Second_Project.PNG"
+                                alt-text="Horiseon Refactoring Project">
+                        </a>
                         <figcaption>This project focused on increasing accessibility and search engine optimization
                             (SEO) by
                             updating the original client's HTML tags to semantic HTML tags and adding alternative-text
