--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Claire Lee</title>
-    <link rel="stylesheet" href="./Assets/style.css">
+    <link rel="stylesheet" href="./Assets/css/style.css">
 </head>
 
 <body>
@@ -46,7 +46,7 @@
                 <h3>CSS Snippet Cheatsheet Project</h3>
                 <figure>
                     <a href="https://suvarna28.github.io/CSS-Snippet-Cheatsheet/" target="_blank" rel="noreferrer">
-                        <img class="thumbnail" src="./Assets/Latest_Project.PNG"
+                        <img class="thumbnail" src="./Assets/images/CSS-Snippet-Cheatsheet.PNG"
                             alt-text="CSS Snippet Cheatsheet Project">
                     </a>
                     <figcaption>This project was a collaborative effort to display a collection of Cascading Style Sheet
@@ -69,7 +69,7 @@
                     <figure>
                         <a href="https://leeclaire156.github.io/GWU_HW1_Horiseon-SEO-Accessibility/" target="_blank"
                             rel="noreferrer">
-                            <img class="thumbnail" src="./Assets/Second_Project.PNG"
+                            <img class="thumbnail" src="./Assets/images/Horiseon-Refactoring.PNG"
                                 alt-text="Horiseon Refactoring Project">
                         </a>
                         <figcaption>This project focused on increasing accessibility and search engine optimization
@@ -94,7 +94,7 @@
                 <section id="third">
                     <h3>Coming Soon</h3>
                     <figure>
-                        <img class="coming-soon" src="./Assets/ComingSoon.svg" alt-text="Construction of House">
+                        <img class="coming-soon" src="./Assets/images/Coming-Soon.svg" alt-text="Construction of House">
                         <figcaption> Stay tuned for this upcoming project!</figcaption>
                     </figure>
                     <div>
@@ -110,7 +110,7 @@
                 <section id="fourth">
                     <h3>Coming Soon</h3>
                     <figure>
-                        <img class="coming-soon" src="./Assets/ComingSoon.svg" alt-text="Construction of House">
+                        <img class="coming-soon" src="./Assets/images/Coming-Soon.svg" alt-text="Construction of House">
                         <figcaption> Stay tuned for this upcoming project!</figcaption>
                     </figure>
                     <div>
@@ -126,7 +126,7 @@
                 <section id="fifth">
                     <h3>Coming Soon</h3>
                     <figure>
-                        <img class="coming-soon" src="./Assets/ComingSoon.svg" alt-text="Construction of House">
+                        <img class="coming-soon" src="./Assets/images/Coming-Soon.svg" alt-text="Construction of House">
                         <figcaption> Stay tuned for this upcoming project!</figcaption>
                     </figure>
                     <div>
