Updates Horiseon Project Links

--- a/index.html
+++ b/index.html
@@ -67,8 +67,7 @@
                 <section id="second">
                     <h3>Horiseon Accessibility and SEO Project</h3>
                     <figure>
-                        <a href="https://leeclaire156.github.io/GWU_HW1_Horiseon-SEO-Accessibility/" target="_blank"
-                            rel="noreferrer">
+                        <a href="https://leeclaire156.github.io/Horiseon-Refactoring/" target="_blank" rel="noreferrer">
                             <img class="thumbnail" src="./Assets/images/Horiseon-Refactoring.PNG"
                                 alt-text="Horiseon Refactoring Project">
                         </a>
@@ -80,12 +79,10 @@
                         </figcaption>
                     </figure>
                     <div>
-                        <a href="https://leeclaire156.github.io/GWU_HW1_Horiseon-SEO-Accessibility/" target="_blank"
-                            rel="noreferrer">
+                        <a href="https://leeclaire156.github.io/Horiseon-Refactoring/" target="_blank" rel="noreferrer">
                             <button>Live Demo</button>
                         </a>
-                        <a href="https://github.com/leeclaire156/GWU_HW1_Horiseon-SEO-Accessibility" target="_blank"
-                            rel="noreferrer">
+                        <a href="https://github.com/leeclaire156/Horiseon-Refactoring" target="_blank" rel="noreferrer">
                             <button>&#60;Code&#62;</button>
                         </a>
                     </div>
