Adds the JS Password Generator Project to the Projects section

--- a/index.html
+++ b/index.html
@@ -43,28 +43,52 @@
         <section id="projects">
             <h2 id="project-header">Projects</h2>
             <section id="first">
-                <h3>CSS Snippet Cheatsheet Project</h3>
+                <h3>Random Password Generator</h3>
                 <figure>
-                    <a href="https://suvarna28.github.io/CSS-Snippet-Cheatsheet/" target="_blank" rel="noreferrer">
-                        <img class="thumbnail" src="./Assets/images/CSS-Snippet-Cheatsheet.PNG"
-                            alt-text="CSS Snippet Cheatsheet Project">
+                    <a href="https://leeclaire156.github.io/Password-Generator/" target="_blank" rel="noreferrer">
+                        <img class="thumbnail" src="./Assets/images/Password-Generator.PNG"
+                            alt-text="Random Password Generator Project">
                     </a>
-                    <figcaption>This project was a collaborative effort to display a collection of Cascading Style Sheet
-                        (CSS)
-                        concepts on a single responsive webpage as a way to study and put into practice CSS concepts.
+                    <figcaption>This project was utilizes javascript to generate a random password based on the user's
+                        choices for character type(s) and length.
                     </figcaption>
                 </figure>
                 <div>
-                    <a href="https://suvarna28.github.io/CSS-Snippet-Cheatsheet/" target="_blank" rel="noreferrer">
+                    <a href="https://leeclaire156.github.io/Password-Generator/" target="_blank" rel="noreferrer">
                         <button>Live Demo</button>
                     </a>
-                    <a href="https://github.com/suvarna28/CSS-Snippet-Cheatsheet" target="_blank" rel="noreferrer">
+                    <a href="https://github.com/leeclaire156/Password-Generator" target="_blank" rel="noreferrer">
                         <button>&#60;Code&#62;</button>
                     </a>
                 </div>
             </section>
+
             <div id="other-projects">
                 <section id="second">
+                    <h3>CSS Snippet Cheatsheet Project</h3>
+                    <figure>
+                        <a href="https://suvarna28.github.io/CSS-Snippet-Cheatsheet/" target="_blank" rel="noreferrer">
+                            <img class="thumbnail" src="./Assets/images/CSS-Snippet-Cheatsheet.PNG"
+                                alt-text="CSS Snippet Cheatsheet Project">
+                        </a>
+                        <figcaption>This project was a collaborative effort to display a collection of Cascading Style
+                            Sheet
+                            (CSS)
+                            concepts on a single responsive webpage as a way to study and put into practice CSS
+                            concepts.
+                        </figcaption>
+                    </figure>
+                    <div>
+                        <a href="https://suvarna28.github.io/CSS-Snippet-Cheatsheet/" target="_blank" rel="noreferrer">
+                            <button>Live Demo</button>
+                        </a>
+                        <a href="https://github.com/suvarna28/CSS-Snippet-Cheatsheet" target="_blank" rel="noreferrer">
+                            <button>&#60;Code&#62;</button>
+                        </a>
+                    </div>
+                </section>
+
+                <section id="third">
                     <h3>Horiseon Accessibility and SEO Project</h3>
                     <figure>
                         <a href="https://leeclaire156.github.io/Horiseon-Refactoring/" target="_blank" rel="noreferrer">
@@ -84,22 +108,6 @@
                         </a>
                         <a href="https://github.com/leeclaire156/Horiseon-Refactoring" target="_blank" rel="noreferrer">
                             <button>&#60;Code&#62;</button>
-                        </a>
-                    </div>
-                </section>
-
-                <section id="third">
-                    <h3>Coming Soon</h3>
-                    <figure>
-                        <img class="coming-soon" src="./Assets/images/Coming-Soon.svg" alt-text="Construction of House">
-                        <figcaption> Stay tuned for this upcoming project!</figcaption>
-                    </figure>
-                    <div>
-                        <!-- <a href="#" target="_blank" rel="noreferrer"> -->
-                        <button>Live Demo</button>
-                        </a>
-                        <!-- <a href="#" target="_blank" rel="noreferrer"> -->
-                        <button>&#60;Code&#62;</button>
                         </a>
                     </div>
                 </section>
