Updates Claire's Projects as of 01-02-2023

--- a/index.html
+++ b/index.html
@@ -43,21 +43,21 @@
         <section id="projects">
             <h2 id="project-header">Projects</h2>
             <section id="first">
-                <h3>Random Password Generator</h3>
+                <h3>Let's Cook!</h3>
                 <figure>
-                    <a href="https://leeclaire156.github.io/Password-Generator/" target="_blank" rel="noreferrer">
-                        <img class="thumbnail" src="./Assets/images/Password-Generator.PNG"
-                            alt-text="Random Password Generator Project">
+                    <a href="https://leeclaire156.github.io/Lets-Cook/" target="_blank" rel="noreferrer">
+                        <img class="thumbnail" src="./Assets/images/Lets-Cook.PNG" alt-text="Lets Cook Project">
                     </a>
-                    <figcaption>This project was utilizes javascript to generate a random password based on the user's
-                        choices for character type(s) and length.
+                    <figcaption>This project is a webpage that allows users to input ingredients they have in the fridge
+                        and suggest recipes based on that input, made by using HTML, CSS, Javascript, Bulma, the
+                        Grammarly API, and the Spoonacular API.
                     </figcaption>
                 </figure>
                 <div>
-                    <a href="https://leeclaire156.github.io/Password-Generator/" target="_blank" rel="noreferrer">
+                    <a href="https://leeclaire156.github.io/Lets-Cook/" target="_blank" rel="noreferrer">
                         <button>Live Demo</button>
                     </a>
-                    <a href="https://github.com/leeclaire156/Password-Generator" target="_blank" rel="noreferrer">
+                    <a href="https://github.com/leeclaire156/Lets-Cook" target="_blank" rel="noreferrer">
                         <button>&#60;Code&#62;</button>
                     </a>
                 </div>
@@ -65,85 +65,91 @@
 
             <div id="other-projects">
                 <section id="second">
-                    <h3>CSS Snippet Cheatsheet Project</h3>
+                    <h3>Weather Dashboard</h3>
                     <figure>
-                        <a href="https://suvarna28.github.io/CSS-Snippet-Cheatsheet/" target="_blank" rel="noreferrer">
-                            <img class="thumbnail" src="./Assets/images/CSS-Snippet-Cheatsheet.PNG"
-                                alt-text="CSS Snippet Cheatsheet Project">
+                        <a href="https://leeclaire156.github.io/Weather-Dashboard/" target="_blank" rel="noreferrer">
+                            <img class="thumbnail" src="./Assets/images/Weather-Dashboard.png"
+                                alt-text="Weather Dashboard Project">
                         </a>
-                        <figcaption>This project was a collaborative effort to display a collection of Cascading Style
-                            Sheet
-                            (CSS)
-                            concepts on a single responsive webpage as a way to study and put into practice CSS
-                            concepts.
+                        <figcaption>This project allows users to look at the current weather and a five day forecast for
+                            the city of their
+                            choice using a third party API, OpenWeatherMap, and a CSS library, Bulma.
                         </figcaption>
                     </figure>
                     <div>
-                        <a href="https://suvarna28.github.io/CSS-Snippet-Cheatsheet/" target="_blank" rel="noreferrer">
+                        <a href="https://leeclaire156.github.io/Weather-Dashboard/" target="_blank" rel="noreferrer">
                             <button>Live Demo</button>
                         </a>
-                        <a href="https://github.com/suvarna28/CSS-Snippet-Cheatsheet" target="_blank" rel="noreferrer">
+                        <a href="https://github.com/leeclaire156/Weather-Dashboard" target="_blank" rel="noreferrer">
                             <button>&#60;Code&#62;</button>
                         </a>
                     </div>
                 </section>
 
                 <section id="third">
-                    <h3>Horiseon Accessibility and SEO Project</h3>
+                    <h3>Work Day Scheduler</h3>
                     <figure>
-                        <a href="https://leeclaire156.github.io/Horiseon-Refactoring/" target="_blank" rel="noreferrer">
-                            <img class="thumbnail" src="./Assets/images/Horiseon-Refactoring.PNG"
-                                alt-text="Horiseon Refactoring Project">
+                        <a href="https://leeclaire156.github.io/Scheduler/" target="_blank" rel="noreferrer">
+                            <img class="thumbnail" src="./Assets/images/Scheduler.png"
+                                alt-text="Work Day Scheduler Project">
                         </a>
-                        <figcaption>This project focused on increasing accessibility and search engine optimization
-                            (SEO) by
-                            updating the original client's HTML tags to semantic HTML tags and adding alternative-text
-                            to
-                            images for screen-readers.
+                        <figcaption>This project utilizes third party APIs, Day.js and jQuery.js to create a work day
+                            scheduler that allows the user to input and save events for each hour.
                         </figcaption>
                     </figure>
                     <div>
-                        <a href="https://leeclaire156.github.io/Horiseon-Refactoring/" target="_blank" rel="noreferrer">
+                        <a href="https://leeclaire156.github.io/Scheduler/" target="_blank" rel="noreferrer">
                             <button>Live Demo</button>
                         </a>
-                        <a href="https://github.com/leeclaire156/Horiseon-Refactoring" target="_blank" rel="noreferrer">
+                        <a href="https://github.com/leeclaire156/Scheduler" target="_blank" rel="noreferrer">
                             <button>&#60;Code&#62;</button>
                         </a>
                     </div>
                 </section>
 
                 <section id="fourth">
-                    <h3>Coming Soon</h3>
+                    <h3>Hollow Knight Quiz</h3>
                     <figure>
-                        <img class="coming-soon" src="./Assets/images/Coming-Soon.svg" alt-text="Construction of House">
-                        <figcaption> Stay tuned for this upcoming project!</figcaption>
+                        <a href="https://leeclaire156.github.io/Hollow-Knight-Quiz/" target="_blank" rel="noreferrer">
+                            <img class="thumbnail" src="./Assets/images/Hollow-Knight-Quiz.PNG"
+                                alt-text="Hollow Knight Quiz Project">
+                        </a>
+                        <figcaption>This project utilizes document object model (DOM) manipulation through web APIs
+                            along with HTML, CSS, and JavaScript to create a quiz game based on Hollow Knight made by
+                            Team Cherry.
+                        </figcaption>
                     </figure>
                     <div>
-                        <!-- <a href="#" target="_blank" rel="noreferrer"> -->
-                        <button>Live Demo</button>
+                        <a href="https://leeclaire156.github.io/Hollow-Knight-Quiz/" target="_blank" rel="noreferrer">
+                            <button>Live Demo</button>
                         </a>
-                        <!-- <a href="#" target="_blank" rel="noreferrer"> -->
-                        <button>&#60;Code&#62;</button>
+                        <a href="https://github.com/leeclaire156/Hollow-Knight-Quiz" target="_blank" rel="noreferrer">
+                            <button>&#60;Code&#62;</button>
                         </a>
                     </div>
                 </section>
 
                 <section id="fifth">
-                    <h3>Coming Soon</h3>
+                    <h3>Random Password Generator</h3>
                     <figure>
-                        <img class="coming-soon" src="./Assets/images/Coming-Soon.svg" alt-text="Construction of House">
-                        <figcaption> Stay tuned for this upcoming project!</figcaption>
+                        <a href="https://leeclaire156.github.io/Password-Generator/" target="_blank" rel="noreferrer">
+                            <img class="thumbnail" src="./Assets/images/Password-Generator.PNG"
+                                alt-text="Random Password Generator Project">
+                        </a>
+                        <figcaption>This project was utilizes javascript to generate a random password based on the
+                            user's
+                            choices for character type(s) and length.
+                        </figcaption>
                     </figure>
                     <div>
-                        <!-- <a href="#" target="_blank" rel="noreferrer"> -->
-                        <button>Live Demo</button>
+                        <a href="https://leeclaire156.github.io/Password-Generator/" target="_blank" rel="noreferrer">
+                            <button>Live Demo</button>
                         </a>
-                        <!-- <a href="#" target="_blank" rel="noreferrer"> -->
-                        <button>&#60;Code&#62;</button>
+                        <a href="https://github.com/leeclaire156/Password-Generator" target="_blank" rel="noreferrer">
+                            <button>&#60;Code&#62;</button>
                         </a>
                     </div>
                 </section>
-            </div>
 
         </section>
 
@@ -152,7 +158,9 @@
             <ul>
                 <li class="links">
                     <strong>Email: </strong>
-                    <a href="mailto: lee.claire156@gmail.com">lee.claire156@gmail.com</a>
+                    <a href="mailto: lee.claire156@gmail.com">
+                        lee.claire156@gmail.com
+                    </a>
                 </li>
                 <li class="links">
                     <strong>GitHub: </strong>
@@ -163,7 +171,8 @@
                 <li class="links">
                     <strong>LinkedIn: </strong>
                     <a href="https://www.linkedin.com/in/claire-lee-556b3a209/" target="_blank" rel="noreferrer">Let's
-                        Connect</a>
+                        Connect
+                    </a>
                 </li>
             </ul>
         </section>
