--- a/index.html
+++ b/index.html
@@ -35,29 +35,27 @@
                 program, I decided that it wasn't for me and that I desired a career that better balanced creativity and
                 problem-solving skills. Please follow me as I develop websites and myself.
             </article>
-            <img id="me"
-                src="https://media-exp1.licdn.com/dms/image/C4E03AQGUWoaKUKHksg/profile-displayphoto-shrink_200_200/0/1616515294451?e=1673481600&v=beta&t=KW4fN-hyTrdpbPgDOakq9tuGsZWjhW2E7XZQDmeUUCY"
-                alt-text="Image of Claire Lee">
+            <img id="me" src="./Assets/images/Lee_Claire.jpg" alt-text="Image of Claire Lee">
         </section>
 
         <section id="projects">
             <h2 id="project-header">Projects</h2>
             <section id="first">
-                <h3>Let's Cook!</h3>
+                <h3>Play Date</h3>
                 <figure>
                     <a href="https://leeclaire156.github.io/Lets-Cook/" target="_blank" rel="noreferrer">
-                        <img class="thumbnail" src="./Assets/images/Lets-Cook.PNG" alt-text="Lets Cook Project">
+                        <img class="thumbnail" src="./Assets/images/PlayDate.PNG" alt-text="Pet PlayDate Project">
                     </a>
-                    <figcaption>This project is a webpage that allows users to input ingredients they have in the fridge
-                        and suggest recipes based on that input, made by using HTML, CSS, Javascript, Bulma, the
-                        Grammarly API, and the Spoonacular API.
+                    <figcaption>This project is a dog-based event hosting website that allows users to make, edit, or
+                        delete posts to meet other dog-owners for play dates. Logged in users can view nearby parks
+                        according to their account's zip code.
                     </figcaption>
                 </figure>
                 <div>
-                    <a href="https://leeclaire156.github.io/Lets-Cook/" target="_blank" rel="noreferrer">
+                    <a href="https://boiling-temple-57076.herokuapp.com/" target="_blank" rel="noreferrer">
                         <button>Live Demo</button>
                     </a>
-                    <a href="https://github.com/leeclaire156/Lets-Cook" target="_blank" rel="noreferrer">
+                    <a href="https://github.com/leeclaire156/Interesting-Tech-Blog" target="_blank" rel="noreferrer">
                         <button>&#60;Code&#62;</button>
                     </a>
                 </div>
@@ -65,87 +63,86 @@
 
             <div id="other-projects">
                 <section id="second">
-                    <h3>Weather Dashboard</h3>
+                    <h3>Interesting Tech Blog</h3>
                     <figure>
-                        <a href="https://leeclaire156.github.io/Weather-Dashboard/" target="_blank" rel="noreferrer">
-                            <img class="thumbnail" src="./Assets/images/Weather-Dashboard.png"
-                                alt-text="Weather Dashboard Project">
+                        <a href="https://github.com/leeclaire156/Interesting-Tech-Blog" target="_blank"
+                            rel="noreferrer">
+                            <img class="thumbnail" src="./Assets/images/IT-Blog.PNG" alt-text="IT Blog Project">
                         </a>
-                        <figcaption>This project allows users to look at the current weather and a five day forecast for
-                            the city of their
-                            choice using a third party API, OpenWeatherMap, and a CSS library, Bulma.
+                        <figcaption>This is content management system (CMS) style blog where users can make blog posts
+                            and comment on other user's posts as well.
                         </figcaption>
                     </figure>
                     <div>
-                        <a href="https://leeclaire156.github.io/Weather-Dashboard/" target="_blank" rel="noreferrer">
+                        <a href="https://interesting-tech-blog.herokuapp.com/" target="_blank" rel="noreferrer">
                             <button>Live Demo</button>
                         </a>
-                        <a href="https://github.com/leeclaire156/Weather-Dashboard" target="_blank" rel="noreferrer">
+                        <a href="https://github.com/leeclaire156/Interesting-Tech-Blog" target="_blank"
+                            rel="noreferrer">
                             <button>&#60;Code&#62;</button>
                         </a>
                     </div>
                 </section>
 
                 <section id="third">
-                    <h3>Work Day Scheduler</h3>
+                    <h3>E-Commerce (Back End)</h3>
                     <figure>
-                        <a href="https://leeclaire156.github.io/Scheduler/" target="_blank" rel="noreferrer">
-                            <img class="thumbnail" src="./Assets/images/Scheduler.png"
-                                alt-text="Work Day Scheduler Project">
+                        <a href="https://github.com/leeclaire156/E-Commerce-Back-End" target="_blank" rel="noreferrer">
+                            <img class="thumbnail" src="./Assets/images/E-Commerce.png"
+                                alt-text="E-Commerce Back End Project">
                         </a>
-                        <figcaption>This project utilizes third party APIs, Day.js and jQuery.js to create a work day
-                            scheduler that allows the user to input and save events for each hour.
+                        <figcaption>This project creates the back end for an e-commerce site by utilizing an Express.js
+                            API to use Sequelize in order to access and interact with the site's MySQL database.
                         </figcaption>
                     </figure>
                     <div>
-                        <a href="https://leeclaire156.github.io/Scheduler/" target="_blank" rel="noreferrer">
-                            <button>Live Demo</button>
+                        <a href="https://drive.google.com/file/d/1_f5dkOjbTo1rSzolt0RRD8hyyWr05-bj/view" target="_blank"
+                            rel="noreferrer">
+                            <button>Demo Video</button>
                         </a>
-                        <a href="https://github.com/leeclaire156/Scheduler" target="_blank" rel="noreferrer">
+                        <a href="https://github.com/leeclaire156/E-Commerce-Back-End" target="_blank" rel="noreferrer">
                             <button>&#60;Code&#62;</button>
                         </a>
                     </div>
                 </section>
 
                 <section id="fourth">
-                    <h3>Hollow Knight Quiz</h3>
+                    <h3>Employee Tracker Command Line Project</h3>
                     <figure>
-                        <a href="https://leeclaire156.github.io/Hollow-Knight-Quiz/" target="_blank" rel="noreferrer">
-                            <img class="thumbnail" src="./Assets/images/Hollow-Knight-Quiz.PNG"
-                                alt-text="Hollow Knight Quiz Project">
+                        <a href="https://github.com/leeclaire156/Employee-Tracker" target="_blank" rel="noreferrer">
+                            <img class="thumbnail" src="./Assets/images/Employee-Tracker.png"
+                                alt-text="Employee Tracker Content Management System Project">
                         </a>
-                        <figcaption>This project utilizes document object model (DOM) manipulation through web APIs
-                            along with HTML, CSS, and JavaScript to create a quiz game based on Hollow Knight made by
-                            Team Cherry.
+                        <figcaption>This project is a command-line application that functions as a content management
+                            system (CMS), able to manage a company's employee database.
                         </figcaption>
                     </figure>
                     <div>
-                        <a href="https://leeclaire156.github.io/Hollow-Knight-Quiz/" target="_blank" rel="noreferrer">
-                            <button>Live Demo</button>
+                        <a href="https://drive.google.com/file/d/1N7DE3uk6BgSCyI6HEmMhzYurrts2tkeV/view" target="_blank"
+                            rel="noreferrer">
+                            <button>Demo Video</button>
                         </a>
-                        <a href="https://github.com/leeclaire156/Hollow-Knight-Quiz" target="_blank" rel="noreferrer">
+                        <a href="https://github.com/leeclaire156/Employee-Tracker" target="_blank" rel="noreferrer">
                             <button>&#60;Code&#62;</button>
                         </a>
                     </div>
                 </section>
 
                 <section id="fifth">
-                    <h3>Random Password Generator</h3>
+                    <h3>Note Taker Project</h3>
                     <figure>
-                        <a href="https://leeclaire156.github.io/Password-Generator/" target="_blank" rel="noreferrer">
-                            <img class="thumbnail" src="./Assets/images/Password-Generator.PNG"
-                                alt-text="Random Password Generator Project">
+                        <a href="https://github.com/leeclaire156/Note-Taker" target="_blank" rel="noreferrer">
+                            <img class="thumbnail" src="./Assets/images/Note-Taker.png" alt-text="Note Taking Project">
                         </a>
-                        <figcaption>This project was utilizes javascript to generate a random password based on the
-                            user's
-                            choices for character type(s) and length.
+                        <figcaption>This project is a note taking application that uses Express.js to save data
+                            collected from notes to a back end.
                         </figcaption>
                     </figure>
                     <div>
-                        <a href="https://leeclaire156.github.io/Password-Generator/" target="_blank" rel="noreferrer">
+                        <a href="https://note-taker-lee-claire-156.herokuapp.com/" target="_blank" rel="noreferrer">
                             <button>Live Demo</button>
                         </a>
-                        <a href="https://github.com/leeclaire156/Password-Generator" target="_blank" rel="noreferrer">
+                        <a href="https://github.com/leeclaire156/Note-Taker" target="_blank" rel="noreferrer">
                             <button>&#60;Code&#62;</button>
                         </a>
                     </div>
